# cis194

./: README.md
week1/my-project/: README.md  my-project.cabal
week1/my-project/app/: Main.hs
week1/my-project/src/: Creditcard.hs  Hanoi.hs  Lib.hs
week2/my-project/: README.md  my-project.cabal
week2/my-project/app/: Main.hs
week2/my-project/src/: Log.hs  LogAnalysis.hs
week3/my-project/: README.md  my-project.cabal
week3/my-project/app/: Main.hs
week3/my-project/src/: Golf.hs
week4/my-project/: README.md  my-project.cabal
week4/my-project/app/: Main.hs
week4/my-project/src/: Week4.hs
